--- a/info.plist
+++ b/info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string>appicon</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.mindquirk.xlf3</string>
+	<string>com.mindquirk.xlf4</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -17,18 +17,18 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>3.5</string>
+	<string>4.0</string>
 	<key>CFBundleSignature</key>
 	<string>xB5i</string>
 	<key>CFBundleVersion</key>
-	<string>3.5</string>
+	<string>4.0</string>
 	<key>NSMainNibFile</key>
 	<string>XLF</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 	<key>SUFeedURL</key>
-	<string>http://mindquirk.com/sparkle/xlf_dev.xml</string>
+	<string>http://mindquirk.com/sparkle/xlf.xml</string>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.5.1</string>
+	<string>10.5.0</string>
 </dict>
 </plist>
