--- a/info.plist
+++ b/info.plist
@@ -21,7 +21,7 @@
 	<key>CFBundleSignature</key>
 	<string>xB5i</string>
 	<key>CFBundleVersion</key>
-	<string>4.0 (r29)</string>
+	<string>4.0</string>
 	<key>NSMainNibFile</key>
 	<string>XLF</string>
 	<key>NSPrincipalClass</key>
